fix scrollbars and update landing page button

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -2560,6 +2560,10 @@ html {
   margin-bottom: 0.25rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -2614,6 +2618,26 @@ html {
 
 .h-1\/2 {
   height: 50%;
+}
+
+.h-90v {
+  height: 90vh;
+}
+
+.h-60 {
+  height: 15rem;
+}
+
+.h-2\/6 {
+  height: 33.333333%;
+}
+
+.h-2\/5 {
+  height: 40%;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .max-h-full {
@@ -2787,6 +2811,16 @@ html {
   padding-bottom: 0.25rem;
 }
 
+.px-24 {
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .pb-20 {
   padding-bottom: 5rem;
 }
@@ -2801,6 +2835,10 @@ html {
 
 .pb-52 {
   padding-bottom: 13rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
 }
 
 .text-3xl {
